--- a/fr v2/Happiwork.html
+++ b/fr v2/Happiwork.html
@@ -5,19 +5,35 @@
 
 <html lang="fr">
 <head>
-	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>
 			  HappiWork Plan | Emmanuel HALTER
 		</title>
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/happiwork.css">
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/header_footer.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/happiwork.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 769px) and (max-width: 1024px)" href="css/middle/happiwork.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (min-device-width: 481px) and (max-device-width: 768px)" href="css/mobile_bis/happiwork.css">
-		<link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="css/mobile/happiwork.css">
+		<!-- Common Resolution -->
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/happiwork.css" />
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" />
+		<!-- High Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/happiwork.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/header_footer.css" />
+		<!-- Low / Tablette Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 62.077em) and (max-width: 84.7em)" href="css/middle/happiwork.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 62.077em) and (max-width: 84.7em)" href="css/middle/header_footer.css" />
+		<!-- Mobile / Tablette Resolution --> 
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 62.077em)" href="css/mobile_high/happiwork.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 37em) and (max-width: 62.077em)" href="css/mobile_high/header_footer.css" />
+		<!-- iPhone / Mini Tablette Resolution -->
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/happiwork.css" />
+		<link rel="stylesheet" type="text/css" media="only screen and (min-width: 24.615em) and (max-width: 37em)" href="css/mobile_medium/header_footer.css" />
+		<!-- Old Mobile Resolution -->
+		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/happiwork.css" />
+		<link rel="stylesheet" type="text/css" media="(max-width: 24.615em)" href="css/mobile_mini/header_footer.css" />
+		
 		<!--[if (lt IE 9)&(!IEMobile)]>
-			<link rel="stylesheet" type="text/css" media="screen and (min-width: 1024px) and (max-width: 1799px)" href="css/default/happiwork.css" media="all">
-			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 1800px)" href="css/vhd/happiwork.css" media="all">
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/happiwork.css" media="all">
+			<link rel="stylesheet" type="text/css" media="screen and (min-width: 84.7em) and (max-width: 119.231em)" href="css/default/header_footer.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/happiwork.css" media="all">
+			<link rel="stylesheet" type="text/css" media="only screen and (min-width: 119.231em)" href="css/vhd/header_footer.css" media="all">
 		<![endif]-->
 		
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
@@ -95,7 +111,7 @@
 			</p>
 		</article>
 		<li>
-			<h2>Introduction</h2>
+			<h1>Introduction</h1>
 			<p>
 				Commencez l'aventure <a href="http://ehalter.com/HPlan/fr/">ici</a>
 			</p>
@@ -105,47 +121,47 @@
 	<section id="calendar" name="calendar">
 		<ol>
 			<li>
-				<h2>Août</h2>	
+				<h1>Août</h1>	
 			</li>
 			<li>
-				<h2>Septembre</h2>
+				<h1>Septembre</h1>
 			</li>
 			<li>
-				<h2>Octobre</h2>
+				<h1>Octobre</h1>
 			</li>
 			<li>
-				<h2>Novembre</h2>
+				<h1>Novembre</h1>
 			</li>
 			<li>
-				<h2>Décembre</h2>
+				<h1>Décembre</h1>
 			</li>
 			<li>
-				<h2>Janvier</h2>
+				<h1>Janvier</h1>
 			</li>
 			<li>
-				<h2>Février</h2>
+				<h1>Février</h1>
 			</li>
 			<li>
-				<h2>Mars</h2>
+				<h1>Mars</h1>
 			</li>
 			<li>
-				<h2>Avril</h2>
+				<h1>Avril</h1>
 			</li>
 			<li>
-				<h2>Mai</h2>
+				<h1>Mai</h1>
 			</li>
 			<li>
-				<h2>Juin</h2>
+				<h1>Juin</h1>
 			</li>
 			<li>
-				<h2>Juillet</h2>
+				<h1>Juillet</h1>
 			</li>
 		</ol>
 	</section>
-	<img alt="fleche" src="images/fleches.png"/>
+	<img id="fleche" alt="fleche" src="images/fleches.png"/>
 	<section id="aftermatch" name="aftermatch">
 		<li>
-			<h2>Bilan</h2>
+			<h1>Bilan</h1>
 			<article>
 				<p>
 					<!--Vous pouvez retrouver mon analyse <a href="http://ehalter.com/HPlan/fr/">là</a>-->
